// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> displays products from the navbar 1`] = `
<div>
  <nav
    class="nav-bar"
  >
    <h1
      class="nav-left"
    >
      <a
        href="/"
      >
        <div>
          Nobody Beats the Wiz
        </div>
      </a>
    </h1>
    <h3
      class="nav-right"
    >
      <a
        href="/showroom"
      >
        <div
          data-testid="store-btn"
        >
          Store
        </div>
      </a>
      <a
        href="/shopping-cart"
      >
        <div
          class="cart-link"
        >
          Cart
           
          <div
            class="no-bubble"
            data-testid="quantity"
          />
        </div>
      </a>
    </h3>
  </nav>
  <div
    class="container"
  >
    <div
      class="showroom-title"
    >
      <h1>
        Products
      </h1>
      <div
        class="showroom"
      >
        <div
          class="showroom-item"
        >
          <img
            src="https://www.extremetech.com/wp-content/uploads/2015/11/772066351852676897.jpg"
          />
          <h4>
            Sony Betamax
          </h4>
          <h6
            class="description"
          >
            The future of home video, forever
          </h6>
          <div
            class="price"
          >
            $
            999
          </div>
          <button
            data-testid="buy-button"
          >
            Add To Cart
          </button>
        </div>
        <div
          class="showroom-item"
        >
          <img
            src="https://i.ebayimg.com/images/g/JcgAAOSwzI5fqssa/s-l400.jpg"
          />
          <h4>
            Magnavox Camcorder
          </h4>
          <h6
            class="description"
          >
            Worth the neck ache
          </h6>
          <div
            class="price"
          >
            $
            1299
          </div>
          <button
            data-testid="buy-button"
          >
            Add To Cart
          </button>
        </div>
        <div
          class="showroom-item"
        >
          <img
            src="https://i.ebayimg.com/images/g/sHUAAOSwxsNfpp5q/s-l400.jpg"
          />
          <h4>
            Magnavox Giant Television
          </h4>
          <h6
            class="description"
          >
            Guaranteed to occupy the most space in your living room
          </h6>
          <div
            class="price"
          >
            $
            1999
          </div>
          <button
            disabled=""
          >
            Out of Stock
          </button>
        </div>
        <div
          class="showroom-item"
        >
          <img
            src="https://hips.hearstapps.com/hmg-prod/amv-prod-cad-assets/wp-content/uploads/2015/11/1971-02001-626x834.jpg?resize=480:*"
          />
          <h4>
            Panasonic Stereo
          </h4>
          <h6
            class="description"
          >
            8-track tapes are totally reliable
          </h6>
          <div
            class="price"
          >
            $
            799
          </div>
          <button
            data-testid="buy-button"
          >
            Add To Cart
          </button>
        </div>
        <div
          class="showroom-item"
        >
          <img
            src="https://i.pinimg.com/originals/10/ce/a6/10cea687c3426681f730d0fe048dbb83.jpg"
          />
          <h4>
            JVC VCR
          </h4>
          <h6
            class="description"
          >
            VCR. WE LOVE INITIALS
          </h6>
          <div
            class="price"
          >
            $
            399
          </div>
          <button
            data-testid="buy-button"
          >
            Add To Cart
          </button>
        </div>
        <div
          class="showroom-item"
        >
          <img
            src="https://cdn.pocket-lint.com/r/s/660x/assets/images/149611-gadgets-feature-iconic-gadgets-of-the-90s-amazing-gadgets-and-gizmos-from-yesteryear-image8-m7zv6rd9xn-jpg.webp?v1"
          />
          <h4>
            Nintendo Gameboy
          </h4>
          <h6
            class="description"
          >
            Do you hate batteries AND your eyes? Play Gameboy!
          </h6>
          <div
            class="price"
          >
            $
            199
          </div>
          <button
            data-testid="buy-button"
          >
            Add To Cart
          </button>
        </div>
        <div
          class="showroom-item"
        >
          <img
            src="https://i.insider.com/524c93b869bedd2663dc4091?width=1200&format=jpeg&auto=webp"
          />
          <h4>
            Sony Walkman
          </h4>
          <h6
            class="description"
          >
            Listen to music anywhere AND look cool
          </h6>
          <div
            class="price"
          >
            $
            149
          </div>
          <button
            disabled=""
          >
            Out of Stock
          </button>
        </div>
        <div
          class="showroom-item"
        >
          <img
            src="https://i.insider.com/524c79596bb3f7ec2fabf524?width=1200&format=jpeg&auto=webp"
          />
          <h4>
            Casio Calculator Watch
          </h4>
          <h6
            class="description"
          >
            Do simple math ANYWHERE
          </h6>
          <div
            class="price"
          >
            $
            249
          </div>
          <button
            data-testid="buy-button"
          >
            Add To Cart
          </button>
        </div>
        <div
          class="showroom-item"
        >
          <img
            src="https://i.insider.com/524c6dffeab8ea2d4a54fc7c?width=1200&format=jpeg&auto=webp"
          />
          <h4>
            The Clapper
          </h4>
          <h6
            class="description"
          >
            The future is now. Clap loudly and just enough times to control electricity.
          </h6>
          <div
            class="price"
          >
            $
            29
          </div>
          <button
            data-testid="buy-button"
          >
            Add To Cart
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<App/> shows the welcome page first 1`] = `
<div>
  <nav
    class="nav-bar"
  >
    <h1
      class="nav-left"
    >
      <a
        href="/"
      >
        <div>
          Nobody Beats the Wiz
        </div>
      </a>
    </h1>
    <h3
      class="nav-right"
    >
      <a
        href="/showroom"
      >
        <div
          data-testid="store-btn"
        >
          Store
        </div>
      </a>
      <a
        href="/shopping-cart"
      >
        <div
          class="cart-link"
        >
          Cart
           
          <div
            class="no-bubble"
            data-testid="quantity"
          />
        </div>
      </a>
    </h3>
  </nav>
  <div
    class="container"
  >
    <img
      alt="the Wiz"
      class="welcome"
      src="https://1.bp.blogspot.com/-cLCLe54gj7U/Xr7vQPbvsrI/AAAAAAAAFVs/AZMQq5-WbfwmGdHJmh-P2o3TQw0ugp7kQCLcBGAsYHQ/s1600/wiz%2Blogo.jpg"
    />
  </div>
</div>
`;
